# yolo8-cls_libtorch

./: .gitignore  CMakeLists.txt  yolo8-cls_libtorch.cpp  yolo8-cls_libtorch.h
